--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
@@ -14,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.3",
     "framer-motion": "^8.5.5",
+    "gh-pages": "^6.2.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.5",
@@ -29,5 +32,6 @@
     "tailwindcss": "^3.4.14",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
-  }
+  },
+  "homepage": "https://ayaka0525.github.io/hogushi/"
 }
